[package]
name = "aarch64_features"
version = "0.1.0" # remember to update html_root_url
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A feature detector for AARCH64, i.e. FEAT_LSE?"
repository = "https://github.com/tschuett/aarch64_features"
readme = "README.md"
keywords = ["features, AARCH64"]
categories = ["feature detection"]
exclude = ["/.gitignore", "/.github/workflows/rust.yml", "/src/main.rs", "/Cargo.lock", "/rust-toolchain.toml"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.24.1"
strum_macros = "0.26.1"

[target.'cfg(target_arch = "aarch64")'.dependencies]
libc = "0.2.132"  # getauxval on Linux
